--- a/WorldTrack/configs/d_hdc.yml
+++ b/WorldTrack/configs/d_hdc.yml
@@ -1,12 +1,12 @@
 data:
   class_path: datasets.PedestrianDataModule
   init_args:
-    data_dir: "/131_data/datasets/HiCAMS/20240110"
+    data_dir: "/131_data/datasets/HiCAMS/20240415"
 model:
-  resolution: [120, 4, 360]  # Y,Z,X
-  bounds: [0, 1440, 0, 480, 0, 200]  # xmin,xmax,ymin,ymax,zmin,zmax
+  resolution: [135, 2, 135]  # Y,Z,X
+  bounds: [0, 900, 0, 900, 0, 20]  # xmin,xmax,ymin,ymax,zmin,zmax
   depth: [32, 250, 3250]
-  num_cameras: 7
-  use_temporal_cache: False
+  # z_sign: -1
+  num_cameras: 3
 trainer:
-  max_epochs: 30
+  max_epochs: 300
