--- a/WorldTrack/configs/t_fit_multi_gpu.yml
+++ b/WorldTrack/configs/t_fit_multi_gpu.yml
@@ -6,11 +6,11 @@ trainer:
     class_path: lightning.pytorch.strategies.DDPStrategy
     init_args:
       find_unused_parameters: True
-  max_epochs: 50
+  # max_epochs: 50
   accumulate_grad_batches: 8
   gradient_clip_val: 0.5
   check_val_every_n_epoch: 1
-  log_every_n_steps: 5
+  log_every_n_steps: 1
   callbacks:
     - class_path: LearningRateMonitor
       init_args:
