--- a/WorldTrack/configs/d_stream_hdc.yml
+++ b/WorldTrack/configs/d_stream_hdc.yml
@@ -2,7 +2,7 @@ data:
   class_path: datasets.StreamDataModule
   init_args:
     data_dir: "../data/wildtrack/Wildtrack_dataset"
-    sources: "../test_rtsp.txt"
+    sources: "../hdc_rtsp.txt"
 model:
   resolution: [120, 4, 360]  # Y,Z,X
   bounds: [0, 1440, 0, 480, 0, 200]  # xmin,xmax,ymin,ymax,zmin,zmax
